[revert]home.html

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -23,9 +23,15 @@ titles:
   fr-FR   : *FR
   fr-LU   : *FR
   # @end locale config
+show_title: false
 articles:
+  data_source: paginator.posts
+  article_type: BlogPosting
+  show_cover: false
   data_source: site.sample_page
   show_excerpt: true
+  show_readmore: true
+  show_info: true
 ---
 <div class="layout--home">
   {%- include paginator.html -%}
@@ -33,5 +39,4 @@ articles:
 <script>
   {%- include scripts/home.js -%}
 </script>
-
 {{ content }}
